--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,26 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  http: ^1.3.0
-  provider: ^6.1.2
-  sqflite: ^2.4.1
-  connectivity_plus: ^6.1.2
-  geolocator: ^10.0.1
-  permission_handler: ^11.1.0
-  flutter_dotenv: ^5.0.2
+  cupertino_icons: ^1.0.2
+  get: ^4.3.8
+  logger: ^2.5.0
+  flutter_screenutil: ^5.0.0+2
+  dio: ^5.7.0
+  http_mock_adapter:
+  pretty_dio_logger:
+  shared_preferences: ^2.0.6
+  location: ^8.0.0
+  flutter_launcher_icons: ^0.14.3
+  flutter_svg: ^2.0.17
+  smooth_page_indicator: ^1.2.0+3
+  flutter_spinkit: ^5.0.0
+  cached_network_image: ^3.0.0
+  carousel_slider: ^5.0.0
+  shimmer: ^3.0.0
+  intl: ^0.20.2
+  step_progress_indicator: ^1.0.2
+  lottie: ^3.3.1
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +64,15 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  adaptive_icon_background: "#6151C3"
+  adaptive_icon_foreground: "assets/images/app_icon_foreground.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,7 +88,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-#    - images/a_dot_ham.jpeg
+    - assets/images/
+    - assets/vectors/
+    - assets/fonts/
+    - assets/data/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
